releng: Add JAVA_HOME as JRE path